--- a/eIVOGo/Views/Account/login.cshtml
+++ b/eIVOGo/Views/Account/login.cshtml
@@ -92,7 +92,7 @@ function show_date(){
     </div>
 </body>
 </html>
-@{ Html.RenderPartial("~/Views/Shared/ReportInputError.ascx");}
+@{ Html.RenderPartial("~/Views/Shared/ReportInputError.cshtml");}
 
 <script>
     $(function () {
