--- a/eIVOGo/Views/SiteAction/SellerMenu.cshtml
+++ b/eIVOGo/Views/SiteAction/SellerMenu.cshtml
@@ -7,49 +7,75 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
             <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/UserProfile/EditMySelf"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>帳號管理</a>
+                <a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>系統使用設定<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/UserProfile/EditMySelf"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>帳號管理</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/Account/AccountIndex"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>使用者管理</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/BusinessRelationship/MaintainRelationship"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>相對營業人資料維護</a>
+                    </li>
+                    <li>
+                        <a href="@Html.Raw(Url.Action("QueryIndex","ProductCatalog"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>常用品項維護</a>
+                    </li>
+                </ul>
             </li>
             <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/Account/AccountIndex"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>使用者管理</a>
+                <a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>發票開立<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceNo/MaintainInvoiceNoInterval"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>電子發票號碼維護</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceBusiness/CreateInvoice"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上開立發票</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/InquireToCancel"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上作廢發票</a>
+                    </li>
+                    <li>
+                        <a href="@Html.Raw(Url.Action("InquireToIssueAllowance","InvoiceProcess"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上開立折讓證明</a>
+                    </li>
+                    <li>
+                        <a href="@Html.Raw(Url.Action("InquireToVoid","InvoiceProcess"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上註銷發票</a>
+                    </li>
+                </ul>
             </li>
             <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/BusinessRelationship/MaintainRelationship"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>相對營業人資料維護</a>
+                <a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>查詢與報表<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/Index"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>資料查詢／列印／匯出</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceNo/VacantNoIndex"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>上期發票空白號碼查詢／匯出</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceQuery/InvoiceMediaReport"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>發票媒體申報檔查詢／匯出</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/InquireToMIG"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>下載MIG檔案</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceQuery/InvoiceSummary"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>發票統計表</a>
+                    </li>
+                </ul>
             </li>
             <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceNo/MaintainInvoiceNoInterval"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>電子發票號碼維護</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/Index"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>資料查詢／列印／匯出</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceNo/VacantNoIndex"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>上期發票空白號碼查詢／匯出</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceQuery/InvoiceMediaReport"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>發票媒體申報檔查詢／匯出</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/IssuingNotice"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>重送開立發票通知</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/InquireToAuthorize"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>核准重印發票</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceBusiness/CreateInvoice"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上開立發票</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/InquireToCancel"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上作廢發票</a>
-            </li>
-            <li>
-                <a href="@(Url.Action("InquireToIssueAllowance","InvoiceProcess"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上開立折讓證明</a>
-            </li>
-            <li>
-                <a href="@(Url.Action("InquireToVoid","InvoiceProcess"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>線上註銷發票</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/InquireToMIG"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>下載MIG檔案</a>
-            </li>
-            <li>
-                <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceQuery/InvoiceSummary"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>發票統計表</a>
+                <a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>訊息通知<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/IssuingNotice"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>重送開立發票通知</a>
+                    </li>
+                    <li>
+                        <a href="@(VirtualPathUtility.ToAbsolute("~/InvoiceProcess/InquireToAuthorize"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>核准重印發票</a>
+                    </li>
+                    <li>
+                        <a href="@Html.Raw(Url.Action("QueryIndex","ProcessRequest"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>工作清單</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
