--- a/eIVOGo/Views/Template/ContentPage.cshtml
+++ b/eIVOGo/Views/Template/ContentPage.cshtml
@@ -15,7 +15,7 @@
     <link href="~/css/rwd-table.min.css" rel="stylesheet" type="text/css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
     @(Styles.Render("~/App_Themes/Visitor"))
-    @{ Html.RenderPartial("~/Module/Common/CommonScriptInclude.ascx");}
+    @{ Html.RenderPartial("~/Views/Shared/CommonScriptInclude.cshtml");}
 
     @{ Html.RenderPartial("~/Views/Shared/JsGrid.ascx");}
 
