--- a/eIVOGo/Views/Account/cbslogin.cshtml
+++ b/eIVOGo/Views/Account/cbslogin.cshtml
@@ -20,6 +20,7 @@
 <head>
     <title>電子發票系統</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/CBSLogin.css" rel="stylesheet" />
     <style>
         .error {
             color: red;
